// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Result > Result customVue demo works fine 1`] = `
<div
  class="t-result t-result--theme-default"
>
  <div
    class="t-result__thumb"
  >
    
    <div
      class="t-image t-image--square external-class-image"
    >
      <div
        class="t-image__mask"
      >
        <div
          class="t-loading"
          style="font-size: 20px;"
        >
          <div
            class="t-loading__dots"
            style="animation-duration: 800ms; width: 20px; height: 20px;"
          >
            
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
            />
            
          </div>
          <!---->
          <!---->
        </div>
      </div>
      <picture>
        <!---->
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/mobile/demos/result1.png"
          style="object-fit: fill; object-position: center;"
        />
      </picture>
    </div>
    
  </div>
  <div
    class="t-result__title"
  >
    
    <div>
      自定义结果
    </div>
    
  </div>
  <div
    class="t-result__description"
  >
    
    <div>
      描述文字
    </div>
    
  </div>
</div>
`;

exports[`Result > Result mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-f5693a74=""
>
  <h1
    class="title"
    data-v-f5693a74=""
  >
    Result 结果
  </h1>
  <p
    class="summary"
    data-v-f5693a74=""
  >
    结果反馈
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-f5693a74=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 类型
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-f5693a74=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        不同结果状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div>
        <div
          class="t-result t-result--theme-success space"
        >
          <div
            class="t-result__thumb"
          >
            <svg
              class="t-icon t-icon-check-circle t-result__icon"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="check-circle"
              >
                <path
                  d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
                  fill="transparent"
                  id="fill1"
                />
                <path
                  d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M16.5 9L10.5 15L7.5 12"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          <div
            class="t-result__title"
          >
            成功状态
          </div>
          <div
            class="t-result__description"
          >
            描述文字
          </div>
        </div>
      </div>
      <div>
        <div
          class="t-result t-result--theme-error space"
        >
          <div
            class="t-result__thumb"
          >
            <svg
              class="t-icon t-icon-close-circle t-result__icon"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="close-circle"
              >
                <path
                  d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
                  fill="transparent"
                  id="fill1"
                />
                <path
                  d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M15.1813 8.81836L11.9997 12M11.9997 12L8.81738 15.1823M11.9997 12L15.1813 15.1816M11.9997 12L8.81738 8.81768"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          <div
            class="t-result__title"
          >
            失败状态
          </div>
          <div
            class="t-result__description"
          >
            描述文字
          </div>
        </div>
      </div>
      <div>
        <div
          class="t-result t-result--theme-warning space"
        >
          <div
            class="t-result__thumb"
          >
            <svg
              class="t-icon t-icon-info-circle t-result__icon"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="info-circle"
              >
                <path
                  d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
                  fill="transparent"
                  id="fill1"
                />
                <path
                  d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M12 16.5L12 11M12 7.5L11.9961 7.5L11.9961 7.49609L12 7.49609L12 7.5Z"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          <div
            class="t-result__title"
          >
            警示状态
          </div>
          <div
            class="t-result__description"
          >
            描述文字
          </div>
        </div>
      </div>
      <div>
        <div
          class="t-result t-result--theme-default space"
        >
          <div
            class="t-result__thumb"
          >
            <svg
              class="t-icon t-icon-info-circle t-result__icon"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="info-circle"
              >
                <path
                  d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
                  fill="transparent"
                  id="fill1"
                />
                <path
                  d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M12 16.5L12 11M12 7.5L11.9961 7.5L11.9961 7.49609L12 7.49609L12 7.5Z"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          <div
            class="t-result__title"
          >
            默认状态
          </div>
          <div
            class="t-result__description"
          >
            描述文字
          </div>
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-f5693a74=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定义结果
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-result t-result--theme-default"
        data-v-f5693a74=""
      >
        <div
          class="t-result__thumb"
        >
          
          <div
            class="t-image t-image--square external-class-image"
          >
            <div
              class="t-image__mask"
            >
              <div
                class="t-loading"
                style="font-size: 20px;"
              >
                <div
                  class="t-loading__dots"
                  style="animation-duration: 800ms; width: 20px; height: 20px;"
                >
                  
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                  />
                  
                </div>
                <!---->
                <!---->
              </div>
            </div>
            <picture>
              <!---->
              <img
                alt=""
                class="t-image__img"
                src="https://tdesign.gtimg.com/mobile/demos/result1.png"
                style="object-fit: fill; object-position: center;"
              />
            </picture>
          </div>
          
        </div>
        <div
          class="t-result__title"
        >
          
          <div>
            自定义结果
          </div>
          
        </div>
        <div
          class="t-result__description"
        >
          
          <div>
            描述文字
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-f5693a74=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        页面位置展示
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="padding"
        data-v-f5693a74=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-f5693a74=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
             页面位置展示 
            
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Result > Result themeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div>
    <div
      class="t-result t-result--theme-success space"
    >
      <div
        class="t-result__thumb"
      >
        <svg
          class="t-icon t-icon-check-circle t-result__icon"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="check-circle"
          >
            <path
              d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
              fill="transparent"
              id="fill1"
            />
            <path
              d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
            <path
              d="M16.5 9L10.5 15L7.5 12"
              id="stroke2"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      <div
        class="t-result__title"
      >
        成功状态
      </div>
      <div
        class="t-result__description"
      >
        描述文字
      </div>
    </div>
  </div>
  <div>
    <div
      class="t-result t-result--theme-error space"
    >
      <div
        class="t-result__thumb"
      >
        <svg
          class="t-icon t-icon-close-circle t-result__icon"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="close-circle"
          >
            <path
              d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
              fill="transparent"
              id="fill1"
            />
            <path
              d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
            <path
              d="M15.1813 8.81836L11.9997 12M11.9997 12L8.81738 15.1823M11.9997 12L15.1813 15.1816M11.9997 12L8.81738 8.81768"
              id="stroke2"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      <div
        class="t-result__title"
      >
        失败状态
      </div>
      <div
        class="t-result__description"
      >
        描述文字
      </div>
    </div>
  </div>
  <div>
    <div
      class="t-result t-result--theme-warning space"
    >
      <div
        class="t-result__thumb"
      >
        <svg
          class="t-icon t-icon-info-circle t-result__icon"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="info-circle"
          >
            <path
              d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
              fill="transparent"
              id="fill1"
            />
            <path
              d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
            <path
              d="M12 16.5L12 11M12 7.5L11.9961 7.5L11.9961 7.49609L12 7.49609L12 7.5Z"
              id="stroke2"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      <div
        class="t-result__title"
      >
        警示状态
      </div>
      <div
        class="t-result__description"
      >
        描述文字
      </div>
    </div>
  </div>
  <div>
    <div
      class="t-result t-result--theme-default space"
    >
      <div
        class="t-result__thumb"
      >
        <svg
          class="t-icon t-icon-info-circle t-result__icon"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="info-circle"
          >
            <path
              d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
              fill="transparent"
              id="fill1"
            />
            <path
              d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12Z"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
            <path
              d="M12 16.5L12 11M12 7.5L11.9961 7.5L11.9961 7.49609L12 7.49609L12 7.5Z"
              id="stroke2"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      <div
        class="t-result__title"
      >
        默认状态
      </div>
      <div
        class="t-result__description"
      >
        描述文字
      </div>
    </div>
  </div>
  
</div>
`;
